--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 ---
-layout: default
-title: Home
+layout: home
 ---
 
-{% assign page = site.posts.first %}
-{% assign content = page.content %}
-{% include post.html %}
+<!-- Set title and description in config.yml -->
